--- a/youtube/styles/header.css
+++ b/youtube/styles/header.css
@@ -6,19 +6,75 @@
 }
 
 .left-section {
-    background-color: lightpink;
-    width: 150px;
+    display: flex;
+    align-items: center;
+    margin-right: 50px;
+}
+
+.menu {
+    width: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.youtube-logo {
+    width: 90px;
 }
 
 .middle-section {
-    background-color: lightgrey;
     flex: 1;
-    margin-left: 70px;
-    margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+
+.search-bar {
+    flex: 1;
+    width: 0;
+    height: 35px;
+    border: 1px solid rgb(206, 204, 204);
+    border-radius: 2px;
+}
+
+.search-icon {
+    width: 25px;
+    height: 37px;
+    border: 1px solid rgb(206, 204, 204);
+    background-color: rgb(240, 240, 240);
+    border-radius: 2px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: -4px;
+}
+
+.voice-search-icon {
+    width: 25px;
+    background-color: rgb(247, 247, 247);
+    margin-left: 10px;
+    border-radius: 30px;
+    padding: 7px;
 }
 
 .right-section {
-    background-color: lightblue;
-    width: 200px;
+    width: 180px;
+    margin-left: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+    padding: 10px;
 }
+
+.right-section img:not(.profile-pics) {
+    width: 25px;
+}
+
+.profile-pics {
+    height: 35px;
+    width: 35px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
