--- a/youtube/styles/general.css
+++ b/youtube/styles/general.css
@@ -2,6 +2,10 @@ body {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    padding-top: 80px;
+    padding-left: 96px;
+    padding-right: 24px;
+    background-color: rgb(248, 248, 248);
 }
 
 p {
