--- a/youtube/styles/header.css
+++ b/youtube/styles/header.css
@@ -3,6 +3,13 @@
     flex-direction: row;
     justify-content: space-between;
     height: 55px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    border-bottom: solid 1px rgb(235, 235, 235);
+    z-index: 100;
 }
 
 .left-section {
@@ -36,17 +43,47 @@
     border-radius: 2px;
 }
 
+.search-bar::placeholder {
+    padding-left: 5px;
+    font-size: 15px;
+}
+
 .search-icon {
     width: 25px;
-    height: 37px;
+    height: 33px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.search-section {
     border: 1px solid rgb(206, 204, 204);
     background-color: rgb(240, 240, 240);
     border-radius: 2px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-left: -4px;
+    margin-left: -3px;
+    position: relative;
+}
+
+.search-section .tooltip {
+    position: absolute;
+    bottom: -40px;
+    right: -10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-weight: lighter;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    border-radius: 2px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+}
+
+.search-section:hover .tooltip {
+    opacity: 1;
 }
 
 .voice-search-icon {
@@ -78,3 +115,20 @@
     border-radius: 20px;
 }
 
+.notifications-container {
+    position: relative;
+}
+
+.notifications-count {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(192, 43, 43);
+    color: white;
+    font-size: 12px;
+    padding: 2px 5px 2px 5px;
+    border-radius: 10px;
+    margin-top: -2px;
+    margin-right: -7px;
+    border: 2px solid white;
+}
