--- a/youtube/styles/youtube.css
+++ b/youtube/styles/youtube.css
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-columns: 50px 1fr;
     width: 300px;
-
+    margin-top: 0;
 }
 
 .channel-img {
@@ -14,7 +14,7 @@
 }
 
 .profile-pic {
-    width: 80%;
+    width: 36px;
     border-radius: 50px;
 
 }
@@ -25,7 +25,8 @@
 }
 
 .thumbnail-box {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    position: relative;
 }
 
 .video-author,
@@ -43,4 +44,18 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+
+.video-time {
+    position: absolute;
+    background-color: black;
+    color: white;
+    bottom: 10px;
+    right: 5px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-right: 3px;
+    padding-left: 3px;
+    font-size: 14px;
+    border-radius: 2px;
 }
